HW-9 - Spotify Search Infrastructure/Core

--- a/src/WebUI/appsettings.json
+++ b/src/WebUI/appsettings.json
@@ -15,5 +15,11 @@
       }
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Spotify": {
+    "TokenUrl": "https://accounts.spotify.com/api/token",
+    "Url": "https://api.spotify.com/v1/",
+    "ClientId": "808c766eb7474c2dbbf4edb04f628f23",
+    "ClientSecret": "44bb5e7cc4eb466fb554f76f6e8ed781"
+  } 
 }
