HW-9 Updated architecture

--- a/src/Application/Application.csproj
+++ b/src/Application/Application.csproj
@@ -19,7 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Spotify\Commands\" />
+    <Folder Include="Music\Commands\" />
   </ItemGroup>
 
 </Project>
