WIP - Getting my code out there

--- a/src/WebUI/ClientApp/angular.json
+++ b/src/WebUI/ClientApp/angular.json
@@ -157,5 +157,8 @@
       }
     }
   },
-  "defaultProject": "HelpfulWebsite_2.WebUI"
+  "defaultProject": "HelpfulWebsite_2.WebUI",
+  "cli": {
+    "analytics": false
+  }
 }
